--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script:
 
 deploy:
   provider: pages
+  target_branch: master
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
   keep_history: true
