--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,43 @@
-language: android
+sudo: false
+
+# NOTE: dist is added here to ensure that Travis CI works consistently
+# on Node.js 12. It is desired to remove it once this issue is resolved
+# or otherwise goes away.
 dist: trusty
+
+env:
+  global:
+    - ANDROID_API_LEVEL=28
+    - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+    - TERM=dumb # Keep gradle from crapping all over the log
+  matrix:
+    - nodejs_version=6
+    - nodejs_version=8
+    - nodejs_version=10
+    - nodejs_version=12
+
+language: android
+jdk:
+  - oraclejdk8
+
 android:
   components:
-    - build-tools-26.0.2
-    - android-26
-    - add-on
-    - extra
+    - tools
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android-$ANDROID_API_LEVEL
   licenses:
-    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
 
-node_js:
-  - "8.11.3"
+before_install:
+  - nvm install $nodejs_version
+  - node --version
+  - npm --version
+  - gradle --version
 
-branches:
-  only:
-    - master
+install:
+  - npm install
 
 before_script:
   - npm install -g cordova
