--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ env:
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     - TERM=dumb # Keep gradle from crapping all over the log
+  matrix:
+    - nodejs_version=6
+    - nodejs_version=8
+    - nodejs_version=10
+    - nodejs_version=12
 
 language: android
 jdk:
@@ -26,7 +31,7 @@ android:
     - 'google-gdk-license-.+'
 
 before_install:
-  - nvm install nodejs_version=12
+  - nvm install $nodejs_version
   - node --version
   - npm --version
   - gradle --version
@@ -52,8 +57,8 @@ deploy:
       branch: master
     local_dir: platforms/browser/www
   - provider: releases
+    file: platforms/android/app/build/outputs/apk/debug/app-debug.apk
     api_key:
       secure: $GITHUB_TOKEN
-    file: platforms/android/app/build/outputs/apk/debug/app-debug.apk
     skip_cleanup: true
     draft: true
