--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+
 
 # NOTE: dist is added here to ensure that Travis CI works consistently
 # on Node.js 12. It is desired to remove it once this issue is resolved
@@ -12,19 +12,32 @@ env:
     - TERM=dumb # Keep gradle from crapping all over the log
     - nodejs_version=12
 
-language: android
-jdk:
-  - oraclejdk8
+matrix:
+  include:
+    - os: linux
+      sudo: false
+      language: android
+      jdk:
+        - oraclejdk8
+      android:
+        components:
+          - tools
+          - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+          - android-$ANDROID_API_LEVEL
+        licenses:
+          - 'android-sdk-preview-license-.+'
+          - 'android-sdk-license-.+'
+          - 'google-gdk-license-.+'
+      allow_failures:
+      - os: osx
+        language: objective-c
+        osx_image: xcode8.3
 
-android:
-  components:
-    - tools
-    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-    - android-$ANDROID_API_LEVEL
-  licenses:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -f  $HOME/.gradle/caches/transforms-1/transforms-1.lock
+  - rm -rf $HOME/.gradle/caches/3.5/fileHashes/
+  - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
 
 before_install:
   - nvm install $nodejs_version
@@ -39,10 +52,12 @@ before_script:
   - npm install -g cordova
   - cordova platform add browser
   - cordova platform add android
+  - cordova platform add ios
 
 script:
   - cordova build browser
   - cordova build android
+  - cordova build ios
 
 deploy:
   - provider: pages
